Fix My Tiki links and desk visibility

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,11 +44,11 @@
     height: 100%;
   }
   html {
-    overflow: hidden;
+    overflow: auto;
   }
   body {
     margin: 0;
-    overflow: hidden;
+    overflow: auto;
     overscroll-behavior: none;
   }
   button,
